add missing parameter to docs script call in github actions workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,7 +36,7 @@ jobs:
           echo `pwd`/mdbook >> $GITHUB_PATH
 
       - name: Build Book
-        run: docs/generate_docs.sh
+        run: docs/generate_docs.sh build
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
