make svgs in docs interactive

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Checkout repo submodules
+        run: git submodule update --init
+
       - name: Install dependencies
         run: |
           sudo add-apt-repository --yes ppa:kicad/kicad-7.0-releases
