add license header to source files

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -1,3 +1,29 @@
+# SPDX-FileCopyrightText: 2023 - 2024 Thomas Buck <thomas@xythobuz.de>
+# SPDX-License-Identifier: CERN-OHL-S-2.0+
+#
+#  ------------------------------------------------------------------------------
+# | Copyright (c) 2023 - 2024 Thomas Buck <thomas@xythobuz.de>                   |
+# |                                                                              |
+# | This source describes Open Hardware and is licensed under the CERN-OHL-S v2  |
+# | or any later version.                                                        |
+# |                                                                              |
+# | You may redistribute and modify this source and make products using it under |
+# | the terms of the CERN-OHL-S v2 (https://ohwr.org/cern_ohl_s_v2.txt)          |
+# | or any later version.                                                        |
+# |                                                                              |
+# | This source is distributed WITHOUT ANY EXPRESS OR IMPLIED WARRANTY,          |
+# | INCLUDING OF MERCHANTABILITY, SATISFACTORY QUALITY AND FITNESS FOR A         |
+# | PARTICULAR PURPOSE. Please see the CERN-OHL-S v2 (or any later version)      |
+# | for applicable conditions.                                                   |
+# |                                                                              |
+# | Source location: https://github.com/drinkrobotics/dispensy                   |
+# |                                                                              |
+# | As per CERN-OHL-S v2 section 4, should You produce hardware based on this    |
+# | source, You must where practicable maintain the Source Location visible      |
+# | on the external case of the Gizmo or other products you make using this      |
+# | source.                                                                      |
+#  ------------------------------------------------------------------------------
+
 name: PCB
 
 # build for each push and pull request
