--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           sudo add-apt-repository --yes ppa:kicad/kicad-7.0-releases
           sudo apt update
-          sudo apt install -y --install-recommends kicad prusa-slicer pipx
+          sudo apt install -y --install-recommends kicad pipx
 
       - name: Install latest mdbook
         run: |
@@ -63,6 +63,14 @@ jobs:
           mkdir mdbook
           curl -sSL $url | tar -xz --directory=./mdbook
           echo `pwd`/mdbook >> $GITHUB_PATH
+
+      - name: Install (more current) PrusaSlicer
+        run: |
+          url="https://github.com/prusa3d/PrusaSlicer/releases/download/version_2.7.1/PrusaSlicer-2.7.1+linux-x64-GTK3-202312121425.AppImage"
+          mkdir prusa
+          curl -o prusa/prusa-slicer -sSL $url
+          chmod a+x prusa/prusa-slicer
+          echo `pwd`/prusa >> $GITHUB_PATH
 
       - name: Install JLC2KiCad_lib
         run: pipx install git+https://github.com/Xyntexx/JLC2KiCad_lib.git@footprint_alignment_workarounds
