--- a/docs/book.toml
+++ b/docs/book.toml
@@ -33,5 +33,8 @@ multilingual = false
 src = "src"
 
 [output.html]
+default-theme = "rust"
+preferred-dark-theme = "ayu"
 git-repository-url = "https://github.com/drinkrobotics/dispensy"
 edit-url-template = "https://github.com/drinkrobotics/dispensy/edit/main/docs/{path}"
+site-url = "/dispensy/"
