--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "firmware/pico-sdk"]
 	path = firmware/pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk
+[submodule "firmware/pico-ssd1306"]
+	path = firmware/pico-ssd1306
+	url = https://github.com/daschr/pico-ssd1306/
